Fix - Alignment issue of radio and checkbox

--- a/assets/css/everest-forms.scss
+++ b/assets/css/everest-forms.scss
@@ -147,8 +147,12 @@
 	}
 	input[type='checkbox'],
 	input[type='radio'] {
-		&:after{
+		&:after,
+		&:before{
 		display: none;
+		}
+		&:checked::before{
+			display: none;
 		}
 	}
 	select{
@@ -301,8 +305,9 @@
 							input[type='checkbox'],
 							input[type='radio'] {
 								padding: 0;
-								margin-top: 6px;
+								margin-top: 4px;
 								margin-right: 8px;
+								width: 20px;
 							}
 						}
 					}
@@ -368,11 +373,15 @@
 							li {
 								display: flex;
 								margin-bottom: 5px;
+								flex-wrap: wrap;
 
 								&.everest-forms-image-choices-item {
 									input {
 										margin-top: 0;
 									}
+								}
+								.everest-forms-field-label-inline{
+									width: calc(100% - 28px);
 								}
 							}
 
